<resources>
    <string name="app_name">Kurnia Motor</string>
    <string name="TitleLogin">Nikmati layanan bengkel digital \ndalam genggaman!</string>
    <string name="Username">Username atau Email</string>
    <string name="Password">Kata Sandi</string>
    <string name="Sandi">Lupa kata sandi?</string>
    <string name="ButtonLogin">Masuk</string>
    <string name="Akun">Belum punya akun?</string>
    <string name="tentang_kami">Selamat datang di aplikasi Bengkel Motor Kurnia. ketersediaan aplikasi ini adalah untuk memudahkan para customer dalam melakukan penanganan permasalahan yang tidak menentu baik dari durasi penanganan sepeda motor dan sepeda motor milik customer yang sudah berkendala dan jauh dari lokasi bengkel.</string>
</resources>