<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bakgroundlogin"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:scaleType="fitXY"
            android:src="@drawable/whatsapp_image_2023_11_19_at_11_41_21_fbab5582"></ImageView>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <TextView
                android:layout_width="363dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/TitleLogin"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Username"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/kotakform"
                android:hint="Masukkan Username/Email anda" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan Kata Sandi anda"
                android:background="@drawable/kotakform"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sandi"
                android:textSize="12dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end|bottom"
                android:textColor="@color/black"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="170dp"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="@color/Orange"
                    android:text="@string/ButtonLogin"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="25dp"
                android:text="@string/Akun"
                android:textColor="@color/black"
                android:textSize="12dp" />

        </FrameLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>